# robbs-ecs

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  benchmark.cpp  example.cpp
include/recs/: component_container.hpp  component_pool.hpp  detail.hpp  entity.hpp  pool.hpp  world.hpp  world_impl.hpp
